WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105152
Fix the Qt Windows build after
r137803
https://bugs.webkit.org/show_bug.cgi?id=105152
Summary
Fix the Qt Windows build after r137803
Csaba Osztrogonác
Reported
2012-12-16 23:28:56 PST
http://trac.webkit.org/changeset/137803
broke the Qt Windows build: c:\webkitbuildslave\szeged-windows-1\qt-windows-32bit-release\build\source\webkit2\shared\CacheModel.h(37) : error C2061: syntax error : identifier 'uint64_t' It seems the problem is caused by missing stdint.h include in CacheModel.h. Fix is coming soon.
Attachments
Patch
(1010 bytes, patch)
2012-12-17 00:07 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-12-17 00:07:48 PST
Created
attachment 179697
[details]
Patch
Kentaro Hara
Comment 2
2012-12-17 02:34:48 PST
Comment on
attachment 179697
[details]
Patch looks ok
WebKit Review Bot
Comment 3
2012-12-17 02:38:19 PST
Comment on
attachment 179697
[details]
Patch Clearing flags on attachment: 179697 Committed
r137889
: <
http://trac.webkit.org/changeset/137889
>
WebKit Review Bot
Comment 4
2012-12-17 02:38:23 PST
All reviewed patches have been landed. Closing bug.
Laszlo Gombos
Comment 5
2012-12-17 13:33:03 PST
***
Bug 105176
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug