Fix the Qt Windows build after r137803 https://bugs.webkit.org/show_bug.cgi?id=105152

Reviewed by Kentaro Hara.

* Shared/CacheModel.h:


Canonical link: https://commits.webkit.org/123402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137889 268f45cc-cd09-0410-ab3c-d52691b4dbfc